# HeatPro

./: .buildinfo  .gitlab-ci.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  README.html  README.md  authors.html  contributing.html  genindex.html  history.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tox.ini
.github/workflows/: build_test.yaml  documentation.yml  python-publish.yaml
.gitlab/issue_templates/: ISSUE_TEMPLATE.md
_modules/: index.html
_modules/heatpro/: demand_profile.html  special_hot_water.html
_sources/: README.rst.txt  index.rst.txt  installation.rst.txt
_sources/modules/: check.rst.txt  demand_profile.rst.txt  disaggregation.rst.txt  temporal_demand.rst.txt
data/: external_factors.csv
docs/: Makefile  conf.py  index.rst  make.bat
docs/modules/: external_factors.rst
heatpro/: __init__.py  district_heating_load.py  special_hot_water.py
heatpro/check/: __init__.py  check_data_format.py  check_weight_format.py
heatpro/demand_profile/: __init__.py  building_heating_profile.py  hot_water_profile.py  loss_profile.py
heatpro/disaggregation/: __init__.py  pipeline.py  weighted_disaggregation.py
heatpro/external_factors/: external_factors.py
heatpro/temporal_demand/: __init__.py  daily_heat_demand.py  hourly_heat_demand.py  monthly_heat_demand.py  temporal_heat_demand.py  yearly_heat_demand.py
modules/: check.html  demand_profile.html  disaggregation.html  external_factors.html  temporal_demand.html
notebooks/: special_hot_water.ipynb
tests/: __init__.py  test_district_heating_load.py  test_heatpro.py
tests/check/: test_check_data_format.py  test_check_weight_format.py
tests/demand_profile/: test_building_heating.py  test_demand_profile.py  test_hot_water.py  test_lost.py
tests/disaggregation/: test_pipeline.py
tests/external_factors/: test_cold_water.py  test_departure.py  test_detecting_heating_season.py  test_external_factors.py  test_process.py  test_return.py  test_soil.py
(+36 files in other folders)
